tests/ui/mut/mut-cant-alias.stderr
error[E0499]: cannot borrow `b` as mutable more than once at a time
  --> $DIR/mut-cant-alias.rs:9:20
   |
LL |     let b1 = &mut *b;
   |                    - first mutable borrow occurs here
LL |     let b2 = &mut *b;
   |                    ^ second mutable borrow occurs here
LL |     b1.use_mut();
   |     -- first borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
